[package]
name = "clru"
version = "0.5.0"
authors = ["marmeladema <xademax@gmail.com>"]
edition = "2021"
description = "An LRU cache implementation with constant time operations and weighted semantic"
readme = "README.md"
repository = "https://github.com/marmeladema/clru-rs"
license = "MIT"
keywords = ["lru", "cache", "hashmap"]

[dependencies]
hashbrown = "0.12.0"

# [dependencies]
# hashbrown = { version = "0.12", optional = true }
